fix: #398 images out of container in description (now working)

--- a/src/app/templates/recordings/recordings-single/recordings-single.component.scss
+++ b/src/app/templates/recordings/recordings-single/recordings-single.component.scss
@@ -45,7 +45,7 @@
   margin-bottom: 2rem;
 }
 
-.recording__description__container img {
+.recording__description__container p img {
   max-width: 100%;
 }
 
